--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -32,3 +32,10 @@ drf-yasg==1.21.7
 
 # Utilities
 python-dateutil==2.8.2
+
+# Production deployment
+gunicorn==21.2.0
+dj-database-url==2.1.0
+whitenoise==6.6.0
+daphne==4.0.0
+psycopg2-binary==2.9.9
